# chip8-emulator

./: CMakeLists.txt  chip8.cpp  chip8.h  main.cpp  plattform.cpp  plattform.h
